# ptt-scrape

./: .gitignore  README.md  pyproject.toml  run.py
databases/: ceca_home-sale_posts.db-journal
src/: database.py  schema.py  scraper.py  utils.py
