[project]
name = "ptt-scrape"
version = "0.1.0"
description = "PTT 爬蟲"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedImport = true
typeCheckingMode = "standard"
ignore = ["src/scraper.py"]
